feat: Add tenant contract end date, email field, and enable tenant editing.